# qradar-userscripts

./: .gitignore  README.md  pyproject.toml  webhook.py
pulse/: README.md  pulse-test.js  pulse.js
